--- a/BloodReg/Views/MainWindow.xaml
+++ b/BloodReg/Views/MainWindow.xaml
@@ -22,11 +22,7 @@
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
+    <Grid RowDefinitions="Auto, *">
         <ui:TitleBar
             Title="{DynamicResource AppTitle}"
             Grid.Row="0"
