--- a/BloodReg/Views/Pages/Student.xaml
+++ b/BloodReg/Views/Pages/Student.xaml
@@ -25,11 +25,7 @@
         <converters:StringToDonationVolumeConverter x:Key="StringToDonationVolumeConverter" />
     </Page.Resources>
 
-    <Grid Margin="16">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="2.5*" />
-        </Grid.ColumnDefinitions>
+    <Grid Margin="16" ColumnDefinitions="*, 2.5*">
         <TextBox Name="XuNiBox" Width="0" />
         <Border
             Grid.Column="0"
@@ -48,11 +44,7 @@
                         PreviewKeyDown="NameBox_PreviewKeyDown"
                         Text="{Binding ViewModel.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     <ui:TextBlock FontSize="32" Text="献血量：" />
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
+                    <Grid ColumnDefinitions="*, Auto">
                         <ui:TextBox
                             x:Name="DonationVolumeBox"
                             Grid.Column="0"
@@ -99,22 +91,13 @@
                 </StackPanel>
             </DockPanel>
         </Border>
-        <Grid Grid.Column="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="1.5*" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
+        <Grid Grid.Column="1" RowDefinitions="1.5*, *">
             <Border
                 Grid.Row="0"
                 Margin="12,0,0,0"
                 Background="{DynamicResource ControlFillColorDefaultBrush}"
                 CornerRadius="4">
-                <Grid Margin="8,8,8,6">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
+                <Grid Margin="8,8,8,6" RowDefinitions="Auto, *, Auto">
                     <Grid Grid.Row="0">
                         <ui:TextBox
                             Grid.Column="0"
@@ -207,12 +190,10 @@
                                 Text="什么都没有 ┑(￣Д ￣)┍" />
                         </StackPanel>
                     </Grid>
-                    <Grid Grid.Row="2" Margin="0,12,0,0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
+                    <Grid
+                        Grid.Row="2"
+                        Margin="0,12,0,0"
+                        ColumnDefinitions="*, Auto, *">
                         <StackPanel
                             Grid.Column="0"
                             HorizontalAlignment="Left"
@@ -332,11 +313,10 @@
                     </Grid>
                 </Grid>
             </Border>
-            <Grid Grid.Row="1" Margin="12,8,0,0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
+            <Grid
+                Grid.Row="1"
+                Margin="12,8,0,0"
+                RowDefinitions="Auto, *">
                 <ui:TextBlock
                     Grid.Row="0"
                     FontSize="24"
